fix logged in on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -201,7 +201,7 @@ body {
   }
   #title-loggedin {
     font-size: 24px;
-    margin-top: 18px;
+    margin-top: 17px;
     width: 120px;
   }
 }
